Setup network layer and auth mechanism
