# core/model/src/main/kotlin/com/shadowflight/model/PAT.kt
@@ -1,0 +1,10 @@
+package com.shadowflight.model
+
+import java.time.OffsetDateTime
+
+data class PAT(
+    val accessToken: String,
+    val expirationDate: OffsetDateTime
+)
+
+fun PAT.didTokenExpired() = expirationDate.isBefore(OffsetDateTime.now())
